--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Webui</title>
+  <title>VRT</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
+
 </head>
 <body>
   <app-root></app-root>
+
+  <!--Import materialize.css-->
+  <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
 </body>
 </html>
